# r2d2

./: README.md  build  notes  test1.scd
synth/: CMakeLists.txt  Env.h  GENLIST  GENLIST.md  LPF.cpp  LPF.h  Noise.h  Perlin.h  SinOsc.h  Utils.h  WaveTableOsc.cpp  WaveTableOsc.h  cmdlist.h  exceptions.h  gen.h  gentoks  main.cpp  parser.cpp  parser.h  syntax  synth.cpp  synth.h  synthdef.cpp  synthdef.h  synthrc  tokeniser.cpp  tokeniser.h  tokens
synth/sounds/: worried
test/: foo.mon  frame.ang  fuzzy.ang  hormone.ang  run  sounds.ang  synth.ang  sys.ang
test/synth/: CMakeLists.txt  cmake  synth.cpp
test/udp/: CMakeLists.txt  README  timeutils.h  udp.cpp  udpclient.h
